<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <Spinner
        android:id="@+id/radius_spinner"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:entries="@array/radius_values"
        android:prompt="@string/radius_prompt" />

    <Button
        android:id="@+id/load_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_map" />

    <Button
        android:id="@+id/list_merchants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_merchants" />

    <Button
        android:id="@+id/upload_merchants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/upload_merchants" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>